2008-08-28  Albrecht Dreß

	specify a key id for an identity

	* doc/C/balsa.xml: document it.
	* libbalsa/gmime-gpgme-context.c: (get_key_from_name):
	check whether it's a name or an id.
	* libbalsa/identity.c: (libbalsa_identity_init,
	libbalsa_identity_finalize, setup_ident_frame,
	ident_dialog_update, display_frame_update,
	libbalsa_identity_new_config, libbalsa_identity_save): new entry
	for forced key id.
	* libbalsa/identity.h: new member for forced key id.
	* libbalsa/message.c: (libbalsa_message_init,
	libbalsa_message_finalize): ditto.
	* libbalsa/message.h: ditto.
	* libbalsa/send.c: (lb_send_from): use it.
	* src/sendmsg-window.c: (bsmsg2message): set it.

2008-08-24  Peter Bloomfield

	* src/main-window.c: simplify get-toolbar and ui-manager.
	* src/main-window.h: ditto.
	* src/message-window.c: (message_window_ui_manager_new,
	message_window_get_toolbar_model, message_window_new): ditto.
	* src/message-window.h: ditto.
	* src/pref-manager.c: (apply_prefs): ditto.
	* src/sendmsg-window.c: (sendmsg_window_ui_manager_new,
	sendmsg_window_get_toolbar_model, sendmsg_window_new): ditto.
	* src/sendmsg-window.h: ditto.
	* src/toolbar-prefs.c: (customize_dialog_cb): ditto.

2008-08-23  Peter Bloomfield

	* libbalsa/mime.c: (libbalsa_wrap_view, libbalsa_unwrap_buffer):
	no more soft newlines.
	* libbalsa/misc.h: remove libbalsa_prepare_delsp.
	* src/balsa-mime-widget-text.c: (balsa_mime_widget_new_text):
	no soft-newline tag.
	* src/sendmsg-window.c: (create_text_area): no soft-newline tag;
	(bsmsg2message): remove libbalsa_prepare_delsp.

2008-08-20  Peter Bloomfield

	* libbalsa/mime.c: (dowrap_rfc2646): do not append a space after
	a trailing tab when format=flowed.

2008-08-20  Peter Bloomfield

	* src/balsa-mime-widget-text.c: (balsa_mime_widget_new_text):
	plug memory leak.

2008-08-20  Peter Bloomfield

	* src/sendmsg-window.c: (bsmsg2message): pass the message to
	sw_wrap_body even if it is flowed, so that