@@ -229,19 +229,21 @@ impl_balsa_application_openMailbox (PortableServer_Servant _servant,
 				    CORBA_Environment * ev) {
     gchar **urls = g_strsplit(name, ";", 20);
     g_idle_add((GSourceFunc) open_mailboxes_idle_cb, urls);
-    
+    gtk_window_present(GTK_WINDOW(balsa_app.main_window));
 }
 
 static void
 impl_balsa_application_openUnread (PortableServer_Servant _servant,
 				   CORBA_Environment * ev) {
     g_idle_add((GSourceFunc) initial_open_unread_mailboxes, NULL);
+    gtk_window_present(GTK_WINDOW(balsa_app.main_window));
 }
 
 static void
 impl_balsa_application_openInbox (PortableServer_Servant _servant,
 				  CORBA_Environment * ev) {
     initial_open_inbox();
+    gtk_window_present(GTK_WINDOW(balsa_app.main_window));
 }
 
 static void
